# ml-pipeline

./: .gitignore  Cargo.toml  README.md
configs/: abalone.yml  breast.yml  car.yml  forestfires.yml  machine.yml  test.yml  votes.yml
datasets/: test.csv
src/: config.rs  lib.rs  main.rs  types.rs
src/data/: column.rs  data_frame.rs  mod.rs
src/evaluation/: classification_score.rs  mod.rs  mse.rs
src/input/: csv.rs  mod.rs
src/models/: knn.rs  knn_classifier.rs  knn_condensed.rs  knn_edited.rs  knn_simple.rs  mod.rs  null.rs  null_classification.rs  null_regression.rs
src/parsers/: mod.rs  nominal.rs  null.rs  numerical.rs  ordinal.rs
src/scrubbers/: mean.rs  mod.rs  mode.rs
src/trainers/: kx2_folds.rs  mod.rs  simple.rs
src/transform/: discretization.rs  log10.rs  mod.rs  normalize.rs  zscore.rs
src/tuning/: grid_search_tuning.rs  mod.rs
src/validation/: classification_score.rs  cross_stratified.rs  kfold.rs  kfold_stratified.rs  mod.rs  mse.rs
