[package]
name = "pipeline"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.1"
itertools = "0.10.5"
num-traits = "0.2.15"
rand = "0.8.5"
serde = { version = "1.0.164", features = ["derive"] }
serde_yaml = "0.9.21"
plotly = "0.8"
voronoi = "0.1"
