[package]
name = "pipeline"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Generate random numbers
rand = "0.8.5"
# Read configuration files
serde = { version = "1.0.164", features = ["derive"] }
serde_yaml = "0.9.21"
# Plotting library
plotly = {version = "0.8", features = ["kaleido"]}
# Calculate Voronoi polygons
voronoi = "0.1"
itertools = "0.11.0"
